# Go2CSleep

./: .gitignore  .gitmodules  README.md
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/c/: CMakeLists.txt  native-lib.c  ssh_config.h.template  wol.c
app/src/main/java/big/pimpin/go2sleephoe/: BaseSshActivity.java  DccActivity.java  Ed25519Keygen.java  MainActivity.java  MainApplication.java  WolActivity.java
app/src/main/res/raw/: keep.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
